FIX: Loading animation size on smaller screens

--- a/src/styles/components/loading.scss
+++ b/src/styles/components/loading.scss
@@ -40,14 +40,14 @@
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
     grid-gap: var(--gutter-2xs);
-    height: 20vw;
+    height: 15vw;
     left: 50%;
     max-height: 80px;
     max-width: 80px;
     position: absolute;
     top: 50%;
     transform: translate(-52%, -32%);
-    width: 20vw;
+    width: 15vw;
     z-index: 2;
   }
 
